# aoc-2025

./: .gitignore  LICENSE  README.md  aoc01.py  aoc02.py  aoc03.py  aoc04.py  aoc05.py  aoc06.py  aoc07.py  aoc08.py  aoc09.py  aoc09_par.py  aoc10.py  aoc11.py  aoc12.py  aoc_util.py  download_input.sh  pyproject.toml  report.txt
data/: aoc01_input.txt.results  aoc02_input.txt.results  aoc03_input.txt.results  aoc04_input.txt.results  aoc05_input.txt.results  aoc06_input.txt.results  aoc07_input.txt.results  aoc08_input.txt.results  aoc09_input.txt.results  aoc10_input.txt.results  aoc11_input.txt.results
